repos/emily-python/contents/test/reader/fail/backslash.em
# Ought to fail: No backslash after .
# Arg: --ast
# Expect failure

# Tags: broken-meta

x.\y
